--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <small>Safety</small>
                 </a>
                 
-                <a href="alert.html" class="action-item yellow-bg">
+                <a href="check_alert.html" class="action-item yellow-bg">
                     <i class="fas fa-exclamation-circle"></i>
                     <span>Alerts</span>
                     <small>Check</small>
@@ -97,4 +97,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
